--- a/assets/css/sass/layout/_grid.scss
+++ b/assets/css/sass/layout/_grid.scss
@@ -32,12 +32,12 @@
     font-size: 20px;
     display: inline-block;
 }
-@media screen and (min-width: 480px) and (max-width: 768px) {
+@media screen and (min-width: 767.98px) and (max-width: 991.98px) {
     .texto1 {
         width: 50%;
     }
   }
-  @media screen and (min-width: 0px) and (max-width:480px) {
+  @media screen and (min-width: 0px) and (max-width:767.98px) {
     .texto1 {
         width: 100%;
     }
@@ -50,10 +50,23 @@
     float: right;
     margin: 0;
 }
+
 @media (max-width:768px) and (min-width: 0px) {
     .imagen1 {
         width: 100%;
         height: 90%;
         margin-top: 35px;
     }
+}
+
+.imagen2 {
+    width: 55%;
+    float: right;
+    margin: 0;
+}
+@media (max-width:991.98px) and (min-width: 767.98px) {
+    .imagen1 {
+        display: none;
+    }
+
 }
