--- a/assets/css/sass/layout/_grid.scss
+++ b/assets/css/sass/layout/_grid.scss
@@ -10,7 +10,7 @@
     display: inline-block;
     margin-bottom: 3px;
 }
-@media screen and (min-width: 828px) and (max-width: 768px) {
+@media screen and (min-width: 828px) and (max-width: 991.98px) {
     .titulo {
         width: 50%;
     }
@@ -18,6 +18,7 @@
   @media screen and (min-width: 0px) and (max-width:828px) {
     .titulo {
         width: 100%;
+        margin-left: 0;
     }
   }
   
@@ -35,6 +36,7 @@
 @media screen and (min-width: 828px) and (max-width: 991.98px) {
     .texto1 {
         width: 50%;
+        margin-left: 0;
     }
   }
   @media screen and (min-width: 0px) and (max-width:828px) {
@@ -57,16 +59,4 @@
         height: 90%;
         margin-top: 35px;
     }
-}
-
-.imagen2 {
-    width: 55%;
-    float: right;
-    margin: 0;
-}
-@media (max-width:991.98px) and (min-width: 767.98px) {
-    .imagen1 {
-        display: ne;
-    }
-
 }
